<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <ImageView
        android:id="@+id/iVDinosaurio"
        android:layout_width="298dp"
        android:layout_height="443dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/__photoroom__1_" />

    <TextView
        android:id="@+id/tUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/eTUsuario"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tUsuario"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/bCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tUsuario"
        app:layout_constraintVertical_bias="0.045" />

    <Switch
        android:id="@+id/swModo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="Modo Noche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/eTUsuario"
        app:layout_constraintVertical_bias="0.072" />

    <Switch
        android:id="@+id/sInfoDino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="Informacion del dinosaurio simplificada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/swModo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <Button
        android:id="@+id/bCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Cerrar Sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bContactar"
        app:layout_constraintTop_toBottomOf="@+id/bContactar"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/bAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ayuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eTUsuario"
        app:layout_constraintTop_toBottomOf="@+id/swModo"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/bContactar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contactanos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bAyuda"
        app:layout_constraintTop_toBottomOf="@+id/bAyuda"
        app:layout_constraintVertical_bias="0.111" />

</androidx.constraintlayout.widget.ConstraintLayout>